basic-deploy/gateway-definition.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gw
spec:
  gatewayClassName: envoy-gw-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
