basic-deploy/http-route-definition.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-http-route
spec: 
  parentRefs:
    - name: envoy-gw
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend-svc
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
